[gd_scene load_steps=5 format=2]

[ext_resource path="res://Sprites/background.png" type="Texture" id=1]
[ext_resource path="res://menufont.tres" type="DynamicFont" id=2]
[ext_resource path="res://Sprites/Recoil.png" type="Texture" id=3]
[ext_resource path="res://Scripts/Main Menu.gd" type="Script" id=4]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_left = 40.0
margin_top = 200.0
margin_right = 813.0
margin_bottom = 460.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer"]
margin_right = 773.0
margin_bottom = 260.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/CenterContainer"]
margin_left = 290.0
margin_top = 28.0
margin_right = 482.0
margin_bottom = 232.0

[node name="Continue" type="TextureButton" parent="MarginContainer/CenterContainer/VBoxContainer"]
margin_right = 192.0
margin_bottom = 48.0
texture_normal = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/CenterContainer/VBoxContainer/Continue"]
margin_left = 8.0
margin_top = 8.0
margin_right = 184.0
margin_bottom = 32.0
mouse_filter = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="MarginContainer/CenterContainer/VBoxContainer/Continue/MarginContainer"]
margin_right = 176.0
margin_bottom = 41.0
mouse_filter = 1
custom_fonts/normal_font = ExtResource( 2 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode_enabled = true
bbcode_text = "[center]Continue[/center]"
text = "Continue"
fit_content_height = true
scroll_active = false

[node name="New Gane" type="TextureButton" parent="MarginContainer/CenterContainer/VBoxContainer"]
margin_top = 52.0
margin_right = 192.0
margin_bottom = 100.0
texture_normal = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/CenterContainer/VBoxContainer/New Gane"]
margin_left = 8.0
margin_top = 8.0
margin_right = 184.0
margin_bottom = 32.0
mouse_filter = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="MarginContainer/CenterContainer/VBoxContainer/New Gane/MarginContainer"]
margin_right = 176.0
margin_bottom = 41.0
mouse_filter = 1
custom_fonts/normal_font = ExtResource( 2 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode_enabled = true
bbcode_text = "[center]New Game[/center]"
text = "New Game"
fit_content_height = true
scroll_active = false

[node name="Options" type="TextureButton" parent="MarginContainer/CenterContainer/VBoxContainer"]
margin_top = 104.0
margin_right = 192.0
margin_bottom = 152.0
texture_normal = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/CenterContainer/VBoxContainer/Options"]
margin_left = 8.0
margin_top = 8.0
margin_right = 184.0
margin_bottom = 32.0
mouse_filter = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="MarginContainer/CenterContainer/VBoxContainer/Options/MarginContainer"]
margin_right = 176.0
margin_bottom = 41.0
mouse_filter = 1
custom_fonts/normal_font = ExtResource( 2 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode_enabled = true
bbcode_text = "[center]Options[/center]"
text = "Options"
fit_content_height = true
scroll_active = false

[node name="Exit" type="TextureButton" parent="MarginContainer/CenterContainer/VBoxContainer"]
margin_top = 156.0
margin_right = 192.0
margin_bottom = 204.0
texture_normal = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/CenterContainer/VBoxContainer/Exit"]
margin_left = 8.0
margin_top = 8.0
margin_right = 184.0
margin_bottom = 32.0
mouse_filter = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="MarginContainer/CenterContainer/VBoxContainer/Exit/MarginContainer"]
margin_right = 176.0
margin_bottom = 41.0
mouse_filter = 1
custom_fonts/normal_font = ExtResource( 2 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode_enabled = true
bbcode_text = "[center]Exit[/center]"
text = "Exit"
fit_content_height = true
scroll_active = false
[connection signal="pressed" from="MarginContainer/CenterContainer/VBoxContainer/Continue" to="." method="_on_Continue_pressed"]
[connection signal="pressed" from="MarginContainer/CenterContainer/VBoxContainer/New Gane" to="." method="_on_New_Gane_pressed"]
[connection signal="pressed" from="MarginContainer/CenterContainer/VBoxContainer/Options" to="." method="_on_Options_pressed"]
[connection signal="pressed" from="MarginContainer/CenterContainer/VBoxContainer/Exit" to="." method="_on_Exit_pressed"]
